[package]
name = "gps"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level='z'

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
gpx="0.9.1"
itertools="*"
lazy_static="*"
osmio={version="*", optional=true}
xml-rs="*"
reqwest = "^0.11"
wasm-bindgen-futures = "0.4.12"
wasm-bindgen = "=0.2.83"
heatshrink = "0.2.0"
unicode-normalization = "0.1.22"
unicode_categories = "0.1.1"
futures = "0.3.28"
console_error_panic_hook = "0.1.7"
geo = "0.25.0"
geo-types = "0.7.9"
byteorder = "1.4.3"
rational = "1.7.0"
# space-time = "0.2.0"
